add community tutorial

--- a/webpage/2_study_system.Rmd
+++ b/webpage/2_study_system.Rmd
@@ -2,7 +2,7 @@
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
-# The study system
+# The PFTC6 study system
 
 ## Alpine ecosystems in Western Norway
 
