--- a/webpage/5-4_bootstrapping.Rmd
+++ b/webpage/5-4_bootstrapping.Rmd
@@ -9,7 +9,7 @@ library(ggplot2)
 theme_set(theme_minimal(base_size = 12))
 ```
 
-## bootstrapping
+## Bootstrapping method
 
 <!-- fig.align = 'right',  -->
 ```{r hex, echo=FALSE, out.width='15%', out.extra='style="float:right; padding:8px"'}
