--- a/webpage/3-1_measure_traits.Rmd
+++ b/webpage/3-1_measure_traits.Rmd
@@ -5,9 +5,10 @@ knitr::opts_chunk$set(echo = FALSE)
 
 ## How to measure plant functional traits?
 
-This protocol is based on the trait handbook from Perez-Harguindeguy et al. [-@Perez-Harguindeguy2013-nv].
+This protocol shows how to measure leaf functional traits in the trait wheel^TW^ during the PFTC courses.
+The protocol is based on the trait handbook from Perez-Harguindeguy et al. [-@Perez-Harguindeguy2013-nv].
 
-This protocol shows how to measure leaf functional traits and was adapted for the traits wheel^TW^ in the PFTC courses.
+
 
 ```{r trait-wheel, out.width='100%', fig.cap="The different stages from collection, processing and curating data from the trait wheel."}
 
@@ -22,10 +23,19 @@ knitr::include_graphics("images/trait_wheel/Collect.png")
 
 ```
 
-**A Sampling individual plants in the field (Intraspecific group)**
 
-_This protocol needs to be checked by group 1_
-Are plants collected inside plots or not? Uprooted or not? How many leaves etc.
+**A Sampling individual plants in the field**
+
+Be careful at all time when working in the experiment and avoid stepping on the experimental plots.
+Make yourself familiar with the experimental design (check the site maps), and how plot, blocks and sites are marked.
+
+To collect plants, go to your plot and use a sitting mat to sit next to the plot.
+Collect the leaves and minimize disturbing the surroundings as much as possible.
+
+
+**Intraspecific group**
+
+_NOT FINAL PROTOCOL_
 
 Follow the species list for our group, starting with the highest priority species for each site.
 DO NOT collect plants from within the plots or the trampled zone around the plots.
@@ -40,14 +50,11 @@ If you cannot find 10 individuals of each species, that is ok.
 After a reasonable search, move on.
 
 
-**B Sampling individual plants in the field (Global change group):**
+**Global change group**
 
-Be careful at all time when working in the experiment, because there are plots everywhere and we want to avoid stepping on the plots.
-Go to your plot, collect your data and minimize trampling as much as possible.
-
-We will sample the most common species for each plot and you are provided with a species list for each plot.
-Each plot has a inner and outer zone (see Figure \@ref(fig:plot)).
-The inner zone should stay untouched if possible and the leaves should be collected from the outer zone.
+Each plot is 50 x 50 cm large and has an inner and outer part (see Figure \@ref(fig:plot)).
+The plots are marked with metal tubes in each corner and a label on the top. 
+The leaves should be collected from the outer part (destructive part) and if possible the inner part should stay untouched.
 
 ```{r plot, out.width='100%', fig.cap="Experimental design (left) and organization of the plot (right)."}
 
@@ -55,15 +62,36 @@ knitr::include_graphics("images/sites/ExperimentalDesign.jpg")
 
 ```
 
-Each plot is marked with metal tubes in each corner and a label on the top. 
-Find 3-5 individuals of each species per plot. 
-Choose reproductively mature adults with fully expanded leaves (i.e. not seedlings). 
-Choose individuals with healthy-looking leaves (i.e. not grazed, no signs of pathogen or herbivore attack, no discoloration).
-Measure the height of each individual (see below). 
-Collect up to 5 leaves from the individual, making sure to include the petiole see Figure \@ref(fig:petiol).
+We aim to collect leaves from the species that make up 80% of the cover in each plot.
+For each plot we will generate a species list.
+Below is some code to generate this species list:
+
+
+```{r cumsum, eval=FALSE, echo=TRUE}
+
+threshold <-  80
+
+cover |> 
+  select(turfID, species, cover) |> 
+  group_by(turfID) |> 
+  arrange(turfID, -cover) |> 
+  mutate(cumsum = cumsum(cover)) |> 
+  filter(cumsum <= threshold)
+
+```
+
+
+For each plot and species find 5 individuals that are spread across the plot to avoid sampling clones.
+Choose reproductively mature adults with fully expanded leaves (i.e. not seedlings) and healthy-looking leaves (i.e. not grazed, no signs of pathogen or herbivore attack, no discoloration).
+_What do we do with grazed/clipped leaves in the grazing treatments?_
+
+Measure the height of each individual and note down the height on the zip-loc bag (see below). 
+
+Collect 1 leaf from the individual, making sure to include the petiole see Figure \@ref(fig:petiol).
 If you are uncertain whether something is a leaf vs. leaflet, ask your group leader.
+
 If you cannot find 5 individuals of each species, that is ok. 
-After a reasonable search, move on.
+After a reasonable search, move on to the next species or plot.
 
 ```{r petiol, out.width="49%", out.height="20%", fig.show='hold',fig.align='center', fig.cap="Leaf anatomy"}
 
@@ -72,20 +100,21 @@ knitr::include_graphics(c("images/trait_wheel/leaf_anatomy_1.png", "images/trait
 ```
 
 
-**Measuring height of individual plants in the field:**
+**Measuring vegetative height of individual plants in the field:**
 
-Record the height of the individual plant. 
-Measure the tallest point of the individual plant, excluding fruits and flowers. 
-Do not stretch the plant if it bends (see Figure \@ref(fig:height).
+Measure the vegetative height of the individual plant (see Figure \@ref(fig:height).
+Vegetative height is the shortest distance between the main photosynthetic tissue on the plant and the ground, excluding any reproductive structure (e.g. buds, flowers or fruits). 
+Leave the plant in it's natural form and do not stretch the plant if it bends.
 
-```{r height, out.width="49%", out.height="20%", fig.show='hold',fig.align='center', fig.cap="Leaf anatomy"}
+
+```{r height, out.width="49%", out.height="20%", fig.show='hold',fig.align='center', fig.cap="Illustrations for how to measure vegetative height."}
 
 knitr::include_graphics(c("images/trait_wheel/height_1.png", "images/trait_wheel/height_2.png"))
 
 ```
 
-Record this measurement legibly (see Figure \@ref(fig:numbers) for how to write numbers) on flagging tape.
-Tie the flagging tape around the individual securely and place individual in bag with wet paper towels for transfer to lab.
+Record this measurement legibly (see Figure \@ref(fig:numbers) for how to write numbers) on the zip-loc bag.
+Place the leaf/leaves for each individual in a bag with wet paper towels for transfer to lab.
 
 
 ```{r numbers, out.width='100%', fig.cap="The one and only approved way to write numbers! "}
@@ -103,13 +132,12 @@ knitr::include_graphics("images/trait_wheel/Process.png")
 
 **Preparing leaves for measuring traits in lab:**
 
-Select one (for the global change group) or five (for the intraspecific group) healthy, mature, undamaged, sun leaf/leaves per individual.
+Select one (for the global change group) or five (for the intraspecific group) leaf/leaves per individual.
 For analysing chemical traits such as percent P, C, N and isotopes, a certain amount of dry biomass is needed. 
 Make sure that we are collecting 0.03 g  (30 mg) dried leaf material. 
 Otherwise select several leaves until there is enough dry weight (bulk sample).
 
-Do we have special cases in Norway???
-If a species does not have leaves, e.g. Baccharis (wings), we will collect a certain length of the stem.Please note on the envelope how much leaf material that was selected (in cm).
+Add special rules for Norwegian leaves.
 
 When collecting the leaf, include petiole and rachis (see Figure \@ref(fig:petiol)).
 Pat the leaf dry with a tissue if there is visible water on the surface.
@@ -133,17 +161,17 @@ knitr::include_graphics(c("images/trait_wheel/label.png", "images/trait_wheel/ba
 _What to write on the envelope_
 
 | Variable  | What to fill in  | |
-|:---|:---|
+|:---|:---|:---|
 |  | Three-D | INCLINE |
 | Collection day  | add day, e.g. 24  | add day, e.g. 24 |
 | Site  | Vik, Joa, Lia | Ulv, Lav, Gud, Skj |
 | Elevation  | 469, 920, 1290 | x, x, x, x |
 | Genus  | Bistorta | |
 | Species | vivipara | |
-| Project | Trait = group 1 + 2, Sean = group 3, Drone = group 5 | |
-| Experiment | ambient, warm, N level, grazing | control or warm |
+| Project | Trait = 3D, Sean = group 3, Drone = group 5 | Trait = I |
+| Experiment | ambient/warm, N1-10, C/M/I/N | control or OTC |
 | PlotID | turfID, e.g. 2 W5M 125 | ??? |
-| Individual Nr  | numeric value  | numeric value |
+| Individual/leaf nr.  | 1-5  | 1-10/1-5 |
 
 
 ```{r wet, out.width='15%'}
@@ -155,7 +183,7 @@ knitr::include_graphics("images/trait_wheel/Wet.png")
 **Wet mass**
 
 Make sure the envelopes are still kept wet.
-Weigh each leaf and write the weight on envelope, including all digits.
+Weigh each leaf and write the weight on the envelope, including all digits.
 
 
 ```{r scan, out.width='15%'}
@@ -182,16 +210,16 @@ Open VNC Viewer and type in the IP address corresponding to your PI:
 |:---|:---|
 | obi wan | 169.254.109.180 |
 | yoda | 169.254.160.193 |
-| bb 8 | 169.254.54.188 |
-| 3 cpo | 169.254.247.22 |
+| bb-8 | 169.254.54.188 |
+| c-3po | 169.254.247.22 |
 | darth vader | 169.254.178.187 |
-| r2 d2 | 169.254.231.2 |
-| Deathstar | 169.254.152.80 |
-| Mr. Spock | 169.254.204.207 |
+| r2-d2 | 169.254.231.2 |
+| deathstar | 169.254.152.80 |
+| mr. spock | 169.254.204.207 |
 |  |  |
 | connect with phone | 192.168.42.42 |
 
-Spare SD card has the same as the pi it is in! 
+The spare SD card has the same IP address as the pi it is in! (???)
 
 
 
@@ -214,10 +242,14 @@ Place wet leaf face-down on the scanner.
 Make sure the leaf is not folded and that leaflets do not overlap. 
 The leaf should not go all the way to the edge of the scanner, because each picture will be cropped.
 You can cut the leaf into several pieces if needed, but please make a remark if you do so (e.g. cut 3). 
-You can tape the leaf to the scanner if it folds (e.g. grasses).
+You can tape the leaf to the scanner using transparent tape if it folds (e.g. grasses).
 
-For graminoids (grasses, sedges, rushes):
-Spread graminoid blades flat and tape to scanner if necessary to hold them in place
+For **graminoids** (grasses, sedges, rushes):
+Spread graminoid blades flat and tape to scanner if necessary to hold them in place.
+
+**Exceptions**
+*Festuca* species are naturally folded and should not be unfolded.
+
 
 Exclude the leaf sheath (see Figure \@ref(fig:leaf)).
 
@@ -236,7 +268,7 @@ If the scanner cannot be found, wait for a bit and try again.
 Check the settings of the scanner.
 These should be set as standard, so please do not touch them if not needed.
 
-The scan should be:
+The scanner settings should be:
 
 - saved in Desktop/leaf_scans/
 - Type: JPEG
@@ -246,15 +278,16 @@ The scan should be:
 
 From here, do this for each leaf:
 
-Press scan (at the bottom of the window) and a couple of seconds wait until the scanning process is done.
+Press scan (at the bottom of the window) and wait a couple of seconds until the scanning process is done.
 A new window will pop up.
 Adjust the zoom to see the full picture (about 25%).
 Check the quality of the scan (has the whole leaf been scanned, is the leaf not upside down, dirt on the scan, etc.). 
 If the scan is not ok, adjust the leaf and repeat the scan.
-Click on the green save button to save the scan. 
+
+When the scan is ok, click on the green save button to save the scan. 
 Make sure the cursor marks the filename (should be default). 
 Scan the barcode on the envelope of the leaf that has been scanned with the barcode reader.
-The filename should be something like: AAA4667 (3 letters, 4 digits)
+The filename should be something like: AAA4667 (3 letters and 4 digits).
 When the scan is saved, the PI will check that the LeafID and that the scanning settings (dpi, etc.) are correct. 
 If anything is wrong, it will open a window with an error message see Figure \@ref(fig:error). 
 Please read it!
@@ -297,7 +330,7 @@ knitr::include_graphics("images/trait_wheel/Thickness.png")
 Make sure the envelopes are still kept wet.
 Thickness varies over the surface of the leaf; generally, the leaf is thickest at the midrib, primary veins, margins, and leaf base. 
 Avoid the midrib when measuring leaf thickness, unless the leaf is too small. 
-Take three thickness measurements at several points on the lamina. 
+Take three thickness measurements at several points on the lamina and note them on the envelope.
 From this, we will later calculate the average thickness. 
 If the leaf is small, it may not be possible to take three unique measurements.
 
@@ -307,7 +340,7 @@ knitr::include_graphics("images/trait_wheel/veins.jpg")
 
 ```
 
-Ferns: Make sure you do not measure thickness on the spore-producing sori on the lower side of fern frond.
+**Ferns** Make sure you do not measure thickness on the spore-producing sori on the lower side of fern frond.
 
 
 ```{r entry, out.width='15%'}
@@ -319,7 +352,7 @@ knitr::include_graphics("images/trait_wheel/Data.png")
 **Data entry**
 
 Ideally the envelope should still be kept wet until this point in case any information is missing.
-Open up the google sheet (link) onto your computer.
+Go to this [google sheet](https://docs.google.com/spreadsheets/d/1ncqbniu0NUzCfcNe2fOl6M2Yj-BeOEXcYlPZHwNiIbk/edit?usp=sharing).
 Connect a barcode scanner to your computer.
 Scan the barcode of an envelope. 
 Make sure that your cursor is in the right cell (ID).
@@ -370,6 +403,7 @@ knitr::include_graphics("images/trait_wheel/Check.png")
 
 **Data checking**
 
+_Check scans_
 Find the folder with the leave scans on google drive: link
 Open each scan and check the follwing criterias:
 
@@ -379,13 +413,14 @@ Open each scan and check the follwing criterias:
 - Has the leaf been cut? If yes, is it indicated on the envelope?
 - How many leaves are on the scan? If > 1 is there a remark on the envelope?
 
-
+_Check data_
 Open RStudio project and the R script (...).
 Download the trait data from google sheet.
 Check if the leafID is valid.
 Check if the variables have valid entries. E.g. correct day, site name, elevations, etc.
 Check if missing values can be found on the envelope or retrieved from the data.
 Plot the data to check if traits have unrealistic values.
+For more details see section data curation.
 
 
 ```{r datadoc, out.width='8%'}
@@ -398,6 +433,6 @@ knitr::include_graphics("images/trait_wheel/DataDoc.png")
 
 Describing method
 Describing data
-
+...
 
 
