--- a/quarto_webpage/9_community.qmd
+++ b/quarto_webpage/9_community.qmd
@@ -44,13 +44,16 @@ puna_site_colour = puna_colour %>%
 ```
 
 
-## Plant community composition data
+# Plant community composition data
 
-For this tutorial you will need the *tidyverse*, *vegan*, *ggvegan* and *broom* package.
+For this tutorial we will use the follwoing packages: *tidyverse*, *vegan*, *ggvegan* and *broom*.
+
+
+## The data
 
 We will use the data from PFTC3 and 5 from Peru.
 
-**Download data**
+To download the data use this code:
 
 ```{r, download-peru-data, eval=FALSE}
 
@@ -80,7 +83,7 @@ comm <- read_csv("data/PFTC3-Puna-PFTC5_Peru_2018-2020_CommunityCover_clean.csv"
 ```
 
 
-### Diversity indices
+## Diversity indices
 
 One way to quantify the number of species species is to calculate diversity indices.
 Some common indices are species *richness*, *diversity* and *evenness*.
@@ -162,8 +165,8 @@ diversity_index %>%
   scale_colour_manual("Treatment", values = puna_treatment_colour$colour[1:3]) +
   scale_fill_manual("Treatment", values = puna_treatment_colour$colour[1:3]) +
   labs(x = "Elevation m a.s.l", y = "") +
-  guides(linetype = FALSE,
-         fill = FALSE,
+  guides(linetype = "none",
+         fill = "none",
          colour = guide_legend(override.aes = list(fill = NA))) +
   facet_wrap( ~ index, scales = "free_y")
 
@@ -172,7 +175,7 @@ diversity_index %>%
 Discuss restuls...
 
 
-### Multivariate analysis - NMDS ordination
+## Multivariate analysis - NMDS ordination
 
 In addition to univariate descriptor of communities such as diversity indices, we might be interested in the species composition along the elevational gradient.
 
@@ -225,7 +228,7 @@ tibble(
 ```
 
 
-```{r, stressplot-calc, echo=FALSE}
+```{r, stressplot-calc, include=FALSE}
 
   NMDS_1 <-  metaMDS(cover_fat_spp, noshare = TRUE, try = 30, k = 1)
   NMDS_2 <-  metaMDS(cover_fat_spp, noshare = TRUE, try = 30, k = 2)
@@ -238,7 +241,8 @@ tibble(
     stress = c(NMDS_1$stress, NMDS_2$stress, NMDS_3$stress, NMDS_4$stress, NMDS_5$stress, NMDS_6$stress),
     dimensions = c(1:6)) %>%
     ggplot(aes(x = dimensions, y = stress)) +
-    geom_point()
+    geom_point() +
+    ylim(0, NA)
 ```
 
 Discuss the results of the stress plot and what desicion is taken. How many dimesions are chosen.
@@ -250,8 +254,7 @@ The output of an ordination can be visualised.
 
 ```{r, plot-nmds}
 
-fNMDS %>%
-  as_tibble() %>%
+fortify(fNMDS) %>%
   mutate(treatment = factor(treatment, levels = c("C", "B", "NB")),
          site = factor(site, levels = c("WAY", "ACJ", "PIL", "TRE", "QUE", "OCC")),
          season = if_else(season == "dry_season",
@@ -261,6 +264,7 @@ fNMDS %>%
   geom_point() +
   scale_colour_manual("Site", values = puna_site_colour$colour) +
   scale_shape_manual("Treatment", values=c(16, 5, 6)) +
+  coord_equal() +
   facet_wrap(~ season)
 
 ```
