--- a/quarto_webpage/5_trait_collection.qmd
+++ b/quarto_webpage/5_trait_collection.qmd
@@ -80,19 +80,27 @@ tibble(Taxon = c(# Incline wishlist (alpine)
 
 **Intraspecific group**
 
-*NOT FINAL PROTOCOL*
+We will work within the **INCLINE project plots** (see @fig-exp-designIncline) focusing on:
+- 4 sites along a precipitation gradient
+- a warming treatment (OTC vs Ambient)
+- 16 grassland species
 
-Follow the species list for our group, starting with the highest priority species for each site.
-DO NOT collect plants from within the plots or the trampled zone around the plots.
-Find 10 individuals of each species, ideally each individual should have five leaves, but three leaves is a minimum.
-Each individual should be at least two meters away from each other, to avoid sampling individuals from the same genetic individual.
-Choose reproductively mature adults with fully expanded leaves (i.e. not seedlings).
-Choose individuals with healthy-looking leaves (i.e. not grazed, no signs of pathogen or herbivore attack, no discoloration).
-Before uprooting the individual, measure its height (see below).
-For very large individuals that are too large to uproot (e.g. ferns), collect 5 leaves from the individual, making sure to include the petiole.
-If you are uncertain whether something is a leaf vs. leaflet, ask your group leader.
-If you cannot find 10 individuals of each species, that is ok.
-After a reasonable search, move on.
+Follow the species list for our group (see @label-sp-list) and work within the OTC and control plots. DO NOT collect plants from within the marked rectangular INCLINE plots or if there is a trampled zone around the plots. We will collect a maximum of 10 individuals per species, per treatment, per site. Ideally, we will find 2 individuals/per species for each treatment and from 5 of the 7 blocks (a pair of OTCs and control plots). Our minimum is 5 individuals per species/treatment/site.  
+
+Choose reproductively mature adults with fully expanded leaves (i.e. not seedlings), and individuals with healthy-looking leaves (i.e. not grazed, no signs of pathogen or herbivore attack, no discoloration). Each individual should be at least one to two meters away from each other, to avoid sampling individuals from the same genetic individual.  
+
+Before collecting the individual, measure its height (see below). For very large individuals that we won't collect the whole plant, i.e. shrubs, large forbs, we will collect 3-5 leaves from the individual, making sure to include the petiole. If you are uncertain whether something is a leaf vs. leaflet, ask your group leader.  
+
+If you cannot find 5 individuals of each species, that is ok. After a reasonable search, we'll move on.
+
+
+```{r}
+#| label: fig-exp-designIncline
+#| fig-cap: "A) The experiment is set up along a precipitation gradient in South Western Norway, from the driest site Ulvehaugen, in the east, to the wettest site Skjellingahaugen in the west. B) At each site, an experimental warming treatment has been imposed on alpine grassland vegetation using Open Top Chambers (OTCs), and paired control plots. There are seven sets of OTCs and control plots at each site."
+#| fig-alt: "A conceptual figure showing the experimental design and plot set up."
+
+knitr::include_graphics('images/sites/PFTC6 INCLINE Sampling Regime Overview Short.jpg')
+```
 
 **Global change group and elevational gradient**
 
@@ -235,13 +243,13 @@ Make sure the envelopes are kept wet at all times.
 |                     | Three-D                                     | INCLINE            |
 | Collection day      | add day, e.g. 24                            | add day, e.g. 24   |
 | Site                | Vik, Joa, Lia                               | Ulv, Lav, Gud, Skj |
-| Elevation           | 469, 920, 1290                              | x, x, x, x         |
-| Genus               | Bistorta                                    |                    |
-| Species             | vivipara                                    |                    |
+| Elevation           | 469, 920, 1290                              | 1208, 1097, 1213, 1088         |
+| Genus               | Bistorta                                    | Bistorta                 |
+| Species             | vivipara                                    | vivipara                   |
 | Project             | Trait = 3D, Sean = group 3, Drone = group 5 | Trait = I          |
 | Experiment          | ambient/warm, N1-10, C/M/I/N                | control or OTC     |
-| PlotID              | turfID, e.g. 2 W5M 125                      | ???                |
-| Individual/leaf nr. | 1-5                                         | 1-10/1-5           |
+| PlotID              | turfID, e.g. 2 W5M 125                      | Block ID: 1-7                |
+| Individual/leaf nr. | 1-5                                         | 1-10/1-3           |
 : Information to write on the envelope. {#tbl-info}
 
 ```{r wet, out.width='15%'}
